[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "LANDMarkClassifier"
version = "2.1.2"
authors = [
    {name = "Josip Rudar", email = "joe.rudar@inspection.gc.ca"},
    {name = "Teresita M. Porter"},
    {name = "Michael Wright"},
    {name = "G. Brian Golding"},
    {name = "Mehrdad Hajibabaei", email = "mhajibab@uoguelph.ca"}
]
description = "LANDMark: An ensemble approach to the supervised selection of biomarkers in high-throughput sequencing data"
keywords = [
    "ecology",
    "multivariate statistics",
    "machine learning",
    "classification"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy == 2.1.3",
    "scikit-learn >= 1.6.1",
    "joblib >= 1.4.2",
    "pandas >= 2.2.3",
    "scipy >= 1.15.2",
    "torch >= 2.6.0"
]

[project.urls]
"Homepage" = "https://github.com/jrudar/LANDMark"
"Repository" = "https://github.com/jrudar/LANDMark.git"
"Bug Tracker" = "https://github.com/jrudar/LANDMark/issues"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "twine",
]

test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
py-modules = ["LANDMarkClassifier"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 30"

[tool.coverage.run]
source = ["LANDMarkClassifier"]
